add cool WoW dude to regex list
because I can and I don't forget his username - cool dude who killed me (and let me kill him)

--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -212,6 +212,14 @@ clearInterval(id);</code></pre>
 									Great for finding unicode characters in copied code, because Haskell can't handle Unicode in your
 									comments...
 								<td>([^\x00-\x7F])
+							<tr>
+								<td>hit him up when you pay for WoW</td>
+								<td>Craizler-TarrenMill</td>
+							</tr>
+							<tr>
+								<td>WoW BattleTag</td>
+								<td>Cyrstad#2776</td>
+							</tr>
 						</tbody>
 					</table>
 				</details>
