add Top Articles to frontpage

--- a/index.html
+++ b/index.html
@@ -132,6 +132,19 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				</p>
 			</section>
 			<section>
+				<h2 id=welcome>
+					<a href="#welcome" class="self-link"></a>
+					Top articles
+				</h2>
+				<ul>
+					<li><a href=/articles/im-sick-of-all-the-negative-content-on-reddit.html>I'm sick of all the negative content on reddit. Here is the fix I use!</a></li>
+					<li><a href=/articles/haskells-fold-functions-explained.html>Haskell’s fold functions explained</a></li>
+					<li><a href=/articles/spark-files-and-taking-notes.html>Spark files and taking notes</a></li>
+					<li><a href=/articles/types-of-haskell-functions.html>Types (or classes) of Haskell functions</a></li>
+					<li><a href=/articles/quick-n-dirty-big-o.html>Quick ‘n Dirty Big O</a></li>
+					</ul>
+			</section>
+			<section>
 				<h2 id=changelog>
 					<a href="#changelog" class="self-link"></a>
 					Changelog
@@ -192,7 +205,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				</h2>
 				<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 				<ul>
-					<li><time>2020-07-25</time> Create an Ubuntu Beginner Guide, with commands I wish I knew when I started. Try to make it 1 or 2 A4's large.
+					<li><time>2020-07-25</time> Create an Ubuntu Beginner Guide, with commands I wish I knew when I started. Try
+						to make it 1 or 2 A4's large.
 					<li><time>2020-07-16</time> Add a "saying of the refresh" where there's a translated Dutch
 						saying/adage/proverb/aphorism</li>
 					<li><time>2020-07-16</time> Add a notification for unsupported browsers. This site assumes you have an updated
