--- a/pages/praetorianpi.html
+++ b/pages/praetorianpi.html
@@ -62,15 +62,12 @@
 
 	<main>
 		<section>
-			<!-- <p style="text-align: left;">If you don't know what this page is about: Go watch <a
-			href="https://www.imdb.com/title/tt0113957/?ref_=fn_al_tt_1">The Net (1995)</a>! It's a perfect 90's movie and
-		if you liked <a href="https://www.imdb.com/title/tt0113243/?ref_=fn_al_tt_1">Hackers (1995)</a> you'll like this
-		one.<br>
-		Or just click the image below<br>
-		Or search the internet for "Praetorian Pi"</p> -->
-			<a href="https://www.youtube.com/watch?v=pXPXMxsXT28">
-				<img loading=lazy width=540 height=960 src="/images/clever.webp"
-					alt="The bad guy from the 'The Net' saying 'clever girl'" /></a>
+			<figure style="border: none; box-shadow: none;">
+				<a href="https://www.youtube.com/watch?v=pXPXMxsXT28">
+					<img loading=lazy width=540 height=960 src="/images/clever.webp"
+						alt="The bad guy from the 'The Net' saying 'clever girl'" /></a>
+				<figcaption>Click the image</figcaption>
+			</figure>
 		</section>
 	</main>
 
