--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				</h2>
 				<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 				<ul>
+					<li><time>2020-07-30</time> Write software reviews: Go in-depth into software. Don't just "oh you can do xyz". What are some neat features/options you can find deep in the depths of the menus? I can call it "Let's talk about X"
 					<li><time>2020-07-29</time> Make some svg images for the footer links
 					<li><time>2020-07-25</time> Create an Ubuntu Beginner Guide, with commands I wish I knew when I started. Try
 						to make it 1 or 2 A4's large.
