add National 'warcry' table to KB

--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -175,7 +175,7 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 			</section>
 
 			<section>
-				<details open>
+				<details>
 					<summary>
 						<h3>Regular Expressions</h3>
 					</summary>
@@ -203,11 +203,12 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 							<tr>
 								<td>hit him up when you pay for WoW</td>
 								<td>Craizler-TarrenMill</td>
-							</tr>
 							<tr>
 								<td>WoW BattleTag</td>
 								<td>Cyrstad#2776</td>
-							</tr>
+							<tr>
+								<td>Find main content of HTML page
+								<td>&lt;main&gt;\n\t+&lt;section&gt;((\n.*?)*)&lt;/section&gt;(\n\t+)&lt;/main&gt;
 						</tbody>
 					</table>
 				</details>
@@ -228,6 +229,34 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 					<p>0-127 is the <a href="http://www.asciitable.com/">available range of ASCII characters</a>, so since we want
 						all NON-ASCII characters, we’re using the ^ operator, thus we get all unicode (by excluding ASCII)</p>
 				</section>
+			</section>
+
+			<section>
+				<details>
+					<summary>
+						<h3>National 'warcry'</h3>
+						<p>Not really a 'warcry', but whenever anyone posts any of these terms other nationals will join in repeating it.</p>
+					</summary>
+					<table>
+						<tbody>
+							<tr>
+								<th> Country
+								<th> Warcry
+							<tr>
+								<td>Dutch
+								<td>G E K O L O N I S E E R D
+							<tr>
+								<td>German
+								<td>Sprich Deutsch, du Hurensohn!
+							<tr>
+								<td>Swedish
+								<td>Skååååål
+							<tr>
+								<td>Finnish
+								<td>Torille!
+						</tbody>
+					</table>
+				</details>
 			</section>
 		</section>
 	</main>
