add Danish warcy to National Warcry table
Turns out 'Skååååål' is more of a Nordic warcry.

--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -252,6 +252,9 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 								<td>Swedish
 								<td>Skååååål
 							<tr>
+								<td>Danish
+								<td>Skååååål
+							<tr>
 								<td>Finnish
 								<td>Torille!
 						</tbody>
