add Bulgarian and another Germany to National 'Warcry' table

--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -236,6 +236,7 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 					<summary>
 						<h3>National 'warcry'</h3>
 						<p>Not really a 'warcry', but whenever anyone posts any of these terms other nationals will join in repeating it.</p>
+						<p>PS: Sometimes it's just an emote spam</p>
 					</summary>
 					<table>
 						<tbody>
@@ -257,6 +258,12 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 							<tr>
 								<td>Finnish
 								<td>Torille!
+							<tr>
+								<td>Bulgarian
+								<td><a href="https://cdn.betterttv.net/emote/56be9fd6d9ec6bf74424760d/3x">KKomrade</a>
+							<tr>
+								<td>Germany
+								<td><a href="https://static-cdn.jtvnw.net/emoticons/v1/111700/3.0">DatScheffe</a>
 						</tbody>
 					</table>
 				</details>
