--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				</h2>
 				<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 				<ul>
+<li><time>2020-08-03</time> Create a Twitch addon that shows a counted and then sorted list of emotes from chat: [12x LULW, 6x LUL, 4x Pogey, 4x KKomando, 4xlowZ, 1x asmonMcCool]
 <li><time>2020-08-03</time> Write an article that explains recursion, without using the word recursion: &quot;How to loop without the for loop construct [RECURSION GONE WILD]&quot;
 <li><time>2020-07-31</time> Write a terminal/command line starter guide for Linux/Ubuntu (ls, pwd, alias, man, tldr, etc) 
 					<li><time>2020-07-30</time> Write software reviews: Go in-depth into software. Don't just "oh you can do xyz". What are some neat features/options you can find deep in the depths of the menus? I can call it "Let's talk about X"
