fixed duplicate meta and title tags
According to NeilPatel.com, I had several duplicate meta descriptions and title tags, which supposedly negatively affects my SEO, so I customized them all.

--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <html lang="en-GB">
 
 <head>
-	<title>Thaumatorium</title>
+	<title>404, page not found</title>
 	<meta charset=utf-8 />
-	<meta name=description content="Where the Magic happens" />
+	<meta name=description content="Looks like you tried to access a page that doesn't exist (anymore)" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
 	<meta name=viewport content="width=device-width, initial-scale=1">
