--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,9 +2,9 @@
 <html lang="en-GB">
 
 <head>
-	<title>Thaumatorium</title>
+	<title>Projects</title>
+	<meta name=description content="A collection of my projects, small and big" />
 	<meta charset=utf-8 />
-	<meta name=description content="Where the Magic happens" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
 	<meta name=viewport content="width=device-width, initial-scale=1">
