--- a/pages/experimentations.html
+++ b/pages/experimentations.html
@@ -2,9 +2,9 @@
 <html lang="en-GB">
 
 <head>
-	<title>Thaumatorium</title>
+	<title>Experimentations</title>
+	<meta name=description content="Typically it's little HTML, CSS and Javascript tests" />
 	<meta charset=utf-8 />
-	<meta name=description content="Where the Magic happens" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
 	<meta name=viewport content="width=device-width, initial-scale=1">
