--- a/pages/code-of-conduct.html
+++ b/pages/code-of-conduct.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 
 <head>
-	<title>Code of Conduct</title>
+	<title>The Thaumatorium's Code of Conduct</title>
 	<meta name=description content="The rules one should follow on this site" />
 	<meta charset=utf-8 />
 	<meta name=theme-color content=#800 />
@@ -62,7 +62,7 @@
 
 	<main>
 		<section>
-			<h2>Code of Conduct</h2>
+			<h2>The Thaumatorium's Code of Conduct</h2>
 			<img src=/images/conduct.webp alt="the Code of Conduct for this site">
 		</section>
 	</main>
