--- a/pages/experimentations.html
+++ b/pages/experimentations.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 
 <head>
-	<title>Experimentations</title>
+	<title>NostraDavid's HTML, CSS and/or Javascript experimentations</title>
 	<meta name=description content="Typically it's little HTML, CSS and Javascript tests" />
 	<meta charset=utf-8 />
 	<meta name=theme-color content=#800 />
@@ -61,7 +61,7 @@
 	</nav>
 
 	<main>
-		<h2>HTML/CSS/JS experimentations go here</h2>
+		<h2>HTML, CSS and/or Javascript experimentations go here</h2>
 		<section>
 			<h3>HTML elements that are interesting on their own</h3>
 			<p style="font-family:'Times New Roman', Times, serif">test</p>
