--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 
 <head>
-	<title>Computer hardware & setup</title>
+	<title>NostraDavid's Computer hardware and general setup</title>
 	<meta name=description content="My hardware setup" />
 	<meta charset=utf-8 />
 	<meta name=theme-color content=#800 />
@@ -68,7 +68,7 @@
 			<!-- https://lowko.tv/setup/ -->
 			<h2 id=hardware>
 				<a href="#hardware" class="self-link"></a>
-				Hardware
+				NostraDavid's Computer hardware and general setup
 			</h2>
 			<h1>PC</h1>
 			<h2 id=zeus-2019>
