--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 
 <head>
-	<title>Projects</title>
+	<title>My programming projects, usually made in HTML/CSS/JS</title>
 	<meta name=description content="A collection of my projects, small and big" />
 	<meta charset=utf-8 />
 	<meta name=theme-color content=#800 />
@@ -63,7 +63,7 @@
 
 	<main>
 		<section>
-			<h2>(Ongoing) projects</h2>
+			<h2>My programming projects</h2>
 			<link async rel=stylesheet href="/styles/projects.css?v=1" />
 			<section>
 				<details>
