--- a/pages/random-video.html
+++ b/pages/random-video.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 
 <head>
-	<title>Random video</title>
+	<title>A curated random video</title>
 	<meta name=description content="A random video from a curated list of videos" />
 	<meta charset=utf-8 />
 	<meta name=theme-color content=#800 />
@@ -62,7 +62,7 @@
 
 	<main>
 		<section>
-			<h3>Random</h3>
+			<h3>A curated random video</h3>
 			<p id=comment>...</p>
 			<iframe id=ytvid width=100% onload="this.height=this.clientWidth*(9/16)"
 				src=https://www.youtube-nocookie.com/embed/ZXVhOPiM4mk frameborder=0
