--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 
 <head>
-	<title>About</title>
+	<title>About NostraDavid and the Thaumatorium</title>
 	<meta name=description content="Information on its creator, the site, and why this site exists" />
 	<meta charset=utf-8 />
 	<meta name=theme-color content=#800 />
@@ -63,7 +63,7 @@
 	<main>
 		<h2 id=about>
 			<a href="#about" class="self-link"></a>
-			About
+			About NostraDavid and the Thaumatorium
 		</h2>
 		<section>
 			<h3 id=nostradavid>
