replace &quot; and &apos; with their ASCII counterparts
I acted a bit zealous with the HTML codes, so I now fixed that.
And since I copied text from my old wordpress site, it copied those weird, fancy, apostrophe. Nice for text, but I need things to be easily searchable.

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				</h2>
 				<ul>
 					<li><a href=/articles/im-sick-of-all-the-negative-content-on-reddit.html>I'm sick of all the negative content on reddit. Here is the fix I use!</a></li>
-					<li><a href=/articles/haskells-fold-functions-explained.html>Haskell’s fold functions explained</a></li>
+					<li><a href=/articles/haskells-fold-functions-explained.html>Haskell's fold functions explained</a></li>
 					<li><a href=/articles/spark-files-and-taking-notes.html>Spark files and taking notes</a></li>
 					<li><a href=/articles/types-of-haskell-functions.html>Types (or classes) of Haskell functions</a></li>
-					<li><a href=/articles/quick-n-dirty-big-o.html>Quick ‘n Dirty Big O</a></li>
+					<li><a href=/articles/quick-n-dirty-big-o.html>Quick 'n Dirty Big O</a></li>
 					</ul>
 			</section>
 			<section>
@@ -206,7 +206,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 				<ul>
 <li><time>2020-08-03</time> Create a Twitch addon that shows a counted and then sorted list of emotes from chat: [12x LULW, 6x LUL, 4x Pogey, 4x KKomando, 4xlowZ, 1x asmonMcCool]
-<li><time>2020-08-03</time> Write an article that explains recursion, without using the word recursion: &quot;How to loop without the for loop construct [RECURSION GONE WILD]&quot;
+<li><time>2020-08-03</time> Write an article that explains recursion, without using the word recursion: "How to loop without the for loop construct [RECURSION GONE WILD]"
 <li><time>2020-07-31</time> Write a terminal/command line starter guide for Linux/Ubuntu (ls, pwd, alias, man, tldr, etc) 
 					<li><time>2020-07-30</time> Write software reviews: Go in-depth into software. Don't just "oh you can do xyz". What are some neat features/options you can find deep in the depths of the menus? I can call it "Let's talk about X"
 					<li><time>2020-07-29</time> Make some svg images for the footer links
