--- a/pages/about.html
+++ b/pages/about.html
@@ -169,7 +169,7 @@
 		<section>
 			<h2>Linguistic Cleansing pisses me the fuck off</h2>
 			<p>More virtue signalling, this time coming out of the Linux community...</p>
-			<blockquote>avoid introducing new usage of ‘master / slave’ (or ‘slave’ independent of ‘master’) and ‘blacklist / whitelist’</blockquote>
+			<blockquote>avoid introducing new usage of 'master / slave' (or 'slave' independent of 'master') and 'blacklist / whitelist'</blockquote>
 			<p><a href="https://www.kernel.org/doc/html/latest/process/coding-style.html#naming">source</a></p>
 		</section>
 	</main>
