--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -189,7 +189,7 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 									Edit the number in between {} to find the nth comma.
 								<td><code>,(?=(?:[^,]*,){3}[^,]*$)</code>
 							<tr>
-								<td>Every line that doesn’t start with a <code>.</code> via regex;<br>
+								<td>Every line that doesn't start with a <code>.</code> via regex;<br>
 									I was trying to filter bootstrap.css from all non-classes
 								<td><code>^((?!^\.).)*$</code>
 							<tr>
@@ -227,7 +227,7 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 (?:…) =	Non-capturing group; doesn't get saves to $1-$9</code></pre>
 					<br>
 					<p>0-127 is the <a href="http://www.asciitable.com/">available range of ASCII characters</a>, so since we want
-						all NON-ASCII characters, we’re using the ^ operator, thus we get all unicode (by excluding ASCII)</p>
+						all NON-ASCII characters, we're using the ^ operator, thus we get all unicode (by excluding ASCII)</p>
 				</section>
 			</section>
 
