--- a/pages/projects.html
+++ b/pages/projects.html
@@ -154,7 +154,7 @@
 					<summary>
 						<h3>Slugify</h3>
 					</summary>
-					<p>Turns regular text into a URL-friendly &quot;slug&quot;</p>
+					<p>Turns regular text into a URL-friendly "slug"</p>
 					<blockquote cite=https://en.wikipedia.org/wiki/Clean_URL#Slug>
 						<p>Some systems define a slug as the part of a URL that identifies a page in human-readable
 							keywords.
