Fix article titles
Titles are now consistent over the site

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 					Top articles
 				</h2>
 				<ul>
-					<li><a href=/articles/im-sick-of-all-the-negative-content-on-reddit.html>I'm sick of all the negative content on reddit. Here is the fix I use!</a></li>
+					<li><a href=/articles/im-sick-of-all-the-negative-content-on-reddit.html>Here is how I fixed the broken system that is Reddit</a></li>
 					<li><a href=/articles/haskells-fold-functions-explained.html>Haskell's fold functions explained</a></li>
-					<li><a href=/articles/spark-files-and-taking-notes.html>Spark files and taking notes</a></li>
-					<li><a href=/articles/types-of-haskell-functions.html>Types (or classes) of Haskell functions</a></li>
-					<li><a href=/articles/quick-n-dirty-big-o.html>Quick 'n Dirty Big O</a></li>
+					<li><a href=/articles/spark-files-and-taking-notes.html>Spark files and keeping track of your ideas, concepts & thoughts</a></li>
+					<li><a href=/articles/types-of-haskell-functions.html>The different types of Functional Programming functions</a></li>
+					<li><a href=/articles/quick-n-dirty-big-o.html>Quick 'n Dirty Big O: A short introduction into Big O</a></li>
 					</ul>
 			</section>
 			<section>
