Make article titles that are too long shorter
Between 30 and 65 (inclusive), is apparently roughly the best title length

--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 
 <head>
-	<title>NostraDavid's Knowledge Base - A collection of code snippets and regex</title>
+	<title>NostraDavid's Knowledge Base - Javascript code snippets and regex</title>
 	<meta name=description content="Little snippets of information. Usually Javascript or Regex, though I may expand this" />
 	<meta charset=utf-8 />
 	<meta name=theme-color content=#800 />
@@ -63,7 +63,7 @@
 
 	<main>
 		<section>
-			<h2>NostraDavid's Knowledge Base - A collection of code snippets and regex</h2>
+			<h2>NostraDavid's Knowledge Base - Javascript code snippets and regex</h2>
 			<p>For now (<time>2020-07-16</time>) it's just snippets of JS and regex that I use every now and then</p>
 			<p>I'd use GitHub for that, but I have a tendency to forget <a href="https://gist.github.com/NostraDavid">GitHub
 					Gist</a> exists&hellip;</p>
